// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Body is working properly 1`] = `
<div
  class="card-pf-body"
>
  This is a Card Body
</div>
`;

exports[`Card Drop Down Button is working properly 1`] = `
<div
  class="card-pf-time-frame-filter dropdown "
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="dropdown-toggle btn btn-default"
    id="cardDropdownButton1"
    role="button"
    type="button"
  >
    Last 30 Days 
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="cardDropdownButton1"
    class="dropdown-menu dropdown-menu-right"
    role="menu"
  >
    <li
      class="active"
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        Last 30 Days
      </a>
    </li>
  </ul>
</div>
`;

exports[`Card Footer is working properly 1`] = `
<div
  class="card-pf-footer"
>
  This is a Card Footer
</div>
`;

exports[`Card Grid is working properly 1`] = `
<div
  class="container-cards-pf container"
>
  Grid Content
</div>
`;

exports[`Card Header is working properly 1`] = `
<div
  class="card-pf-heading"
>
  Card Content
</div>
`;

exports[`Card Link is working properly 1`] = `
<p>
  <a
    class="disabled"
    href="https://github.com/patternfly/patternfly-react/pull/203"
  >
    Card Content
  </a>
</p>
`;

exports[`Card Title is working properly 1`] = `
<h2
  class="card-pf-title"
>
  Card Title
</h2>
`;

exports[`Card is working properly 1`] = `
<div
  class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini"
>
  Card Content
</div>
`;
